--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,13 +5,12 @@ services:
     build:
       context: .
       dockerfile: ./Dockerfile
-      target: development
-      args:
-        - NODE_ENV=development
+    command: npm run dev
     ports:
-      - '3030:3000/tcp'
+      - '3030:3030/tcp'
       - '9229:9229/tcp'
     volumes:
       - .:/opt:delegated
     environment:
       - MONGO_URI
+      - PORT=3030
