--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.5.1",
     "cron": "^3.1.0",
     "express": "^4.18.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.1",
     "morgan": "^1.10.0",
     "node-cron": "^3.0.2",
