--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "devDependencies": {
     "@babel/preset-typescript": "^7.23.0",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^9.0.4",
     "@types/morgan": "^1.9.4",
     "@types/node": "^18.7.6",
     "@types/node-cron": "^3.0.9",
