--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.5.1",
+    "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
     "cron": "^3.1.0",
     "express": "^4.18.1",
     "jsonwebtoken": "^9.0.2",
